@@ -1,3 +1,8 @@
+2004-12-14  Albert Chu  <chu11@llnl.gov>
+
+        * gendersllnl.spec.in, src/Gendersllnl/Makefile.am,
+	src/Libgendersllnl/Makefile.am: Fix 64bit build issue.
+	
 2004-11-30  Albert Chu  <chu11@llnl.gov>
 
 	* NEWS: Updated.
